<resources>
    <string name="app_name">EstoqueDroid</string>
    <string name="Name_Product">Nome do Produto</string>
    <string name="Description">Descrição</string>
    <string name="Price">Preço</string>
    <string name="Register_Product">Cadastrar Produto</string>
    <string name="View_Products">Ver Produtos</string>
    <string name="id">ID</string>
    <string name="Delete_product">Deletar Produto</string>
    <string name="Update_Product">Atualizar Produto</string>
</resources>
